# cpp-grpc-sample-apps

./: CMakeLists.txt  README.md  client.cpp  server.cpp
gen_sample/: greeter.grpc.pb.cc  greeter.grpc.pb.h  greeter.pb.cc  sample.grpc.pb.cc  sample.grpc.pb.h  sample.pb.cc  sample.pb.h
proto/: greeter.proto
scripts/: build.sh  genProto.sh
